# MCP

Expense_Tracker_MCP/: expenses.db  main.py  pyproject.toml  test.py
MCP_clients/ALL_MCP/: client1.py  pyproject.toml  requirements.txt  test.py
MCP_clients/MYSQL_CHATBOT/: chat.py  requirements.txt
Manim/: LICENSE.txt  README.md  manim_server.py
Math/: main.py  pyproject.toml
mysql_mcp/: main.py  pyproject.toml
